# Qt_Cmake_OpenCV

./: .gitignore  CMakeLists.txt  Rotmat2Euler.cpp  Rotmat2Euler.h  main.cpp
include/: detectAruco.h  detectSIFT.h  show.h
src/: detectAruco.cpp  detectSIFT.cpp  show.cpp
